2006-07-03  Werner Koch  <wk@g10code.com>

	* ksba.h, ksba.c (ksba_dn_teststr): New.
	* dn.c (parse_rdn): New optionsl args ROFF and RLEN.  Changed
	callers.
	(ksba_dn_der2str, ksba_dn_str2der): New.
	* libksba.vers: Added new functions.

2006-06-19  Werner Koch  <wk@g10code.com>

	* ber-decoder.c (_ksba_ber_decoder_decode): always store value
	even if NODE is NULL.  It used to work only because NODE used to
	be unitialized and thus most of the time yielded true.  The
	2006-05-03 fix unveiled the actual problem.

2006-06-08  Marcus Brinkmann  <marcus@g10code.de>

	* cert.c (ksba_cert_get_crl_dist_point): Fix type of R_REASON.
	(parse_distribution_point): Fix type of REASON.

2006-05-11  Werner Koch  <wk@g10code.com>

	* ber-decoder.c (decoder_next): Print error description returned
	from BER reader in debug mode.
	(struct ber_decoder_s): New fields OUTER_SEQUENCE_LENGTH,
	IGNORE_GARBAGE and FIRST_TAG_SEEN.
	(decoder_next): Implement hack for the Siemens CA to ignore a
	trailing byte.

2006-05-03  Werner Koch  <wk@g10code.com>

	* ber-decoder.c (decoder_next): Zero out NODE.

	* ocsp.c (ksba_ocsp_prepare_request): Move requestExtensions into
	the TBSRequest.  Reported by Daiko Ueno.

2006-04-23  Brad Hards <bradh@frogmouth.net>  (mb)

	* ksba.h (ksba_crl_get_update_times): Rename parameter to avoid
	collision with C++ keywords.

	* ksba.h: Fix typos.

2006-03-20  Werner Koch  <wk@g10code.com>

	* ber-decoder.c: Dump debug info always to stderr and not to stdout.
	(decoder_next): Take zero length SETs into account.

2005-11-13  Werner Koch  <wk@g10code.com>

	* cert.c (ksba_cert_set_user_data): Fixed.
	* ksba.h (ksba_cert_set_user_data, ksba_cert_get_user_data): Add
	prototypes.

2005-11-11  Werner Koch  <wk@g10code.com>

	* cert.h (struct cert_user_data): New.
	(struct ksba_cert_s): New field UDATA.
	* cert.c (ksba_cert_release): Release the UDATA list.
	(ksba_cert_set_user_data, ksba_cert_get_user_data): New.
	* libksba.vers:  Add the new functions.
