@@ -1,7 +1,7 @@
 Noteworthy changes in version 0.9.16
 -------------------------------------------------
 
-
+ * Fixed a character set conversion bug in BMPStrings.
 
  * Interface changes relative to the 0.9.13 release:
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
